# GenAi-Capstone-2

./: .env.example  .gitignore  README.md  app.py  build_vectorstore.py  config.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_agent_example.py
.github/workflows/: ci.yml
agent/: __init__.py  farm_agent.py  ingest.py  prompts.py  retriever.py
data/: README.md  crop_yield.csv
models/: gb_model.pkl  label_encoders.pkl  scaler.pkl  training_metrics.json
rag_docs/: irrigation_and_pest_reference.txt  maize_guidelines.txt  rice_guidelines.txt  soil_preparation_basics.txt  wheat_guidelines.txt
src/: predict.py  preprocess.py  train.py  ui_utils.py
src/farm_advisor/: app.py  config.py
src/farm_advisor/agent/: farm_agent.py  ingest.py  prompts.py  retriever.py
src/farm_advisor/core/: predict.py  preprocess.py  train.py  ui_utils.py  utils.py
src/farm_advisor/data/: crop_yield.csv
tests/: test_farm_agent.py  test_predict.py  test_preprocess.py
vectorstore/: chroma.sqlite3
