[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farm_advisor"
version = "0.1.0"
description = "GenAI Capstone 2 - Farm Advisory Assistant"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
include = ["farm_advisor*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
executionEnvironments = [
  { root = "." }
]
